# cykura-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
migrations/: deploy.ts
programs/core/: Cargo.toml
programs/core/src/: access_control.rs  context.rs  error.rs  lib.rs
programs/core/src/libraries/: big_num.rs  bit_math.rs  callback.rs  fixed_point_x32.rs  full_math.rs  liquidity_amounts.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  test_utils.rs  tick_math.rs  tick_math_x16.rs  tick_math_x32.rs  unsafe_math.rs
programs/core/src/states/: factory.rs  fee.rs  mod.rs  oracle.rs  pool.rs  position.rs  tick.rs  tick_bitmap.rs  tick_bitmath.rs  tokenized_position.rs
programs/cyclos-protocol-v2/: Cargo.toml
programs/cyclos-protocol-v2/src/: context.rs  error.rs  lib.rs
programs/cyclos-protocol-v2/src/accounts/: pool.rs  position.rs  tick_bitmap.rs  tick_state.rs
programs/cyclos-protocol-v2/src/libraries/: README.md  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs
programs/cyclos-protocol-v2/src/states/: factory.rs  fee.rs  pool.rs  position.rs  tick.rs  tick_bitmap.rs
programs/non-fungible-position-manager/: Cargo.toml
programs/non-fungible-position-manager/src/: context.rs  error.rs  lib.rs  states.rs
programs/non-fungible-position-manager/src/libraries/: liquidity_amounts.rs  liquidity_management.rs  mod.rs
programs/non-fungible-position-manager/src/states/: mod.rs  non_fungible_position.rs  position_manager.rs  tokenized_position.rs
programs/non_fungible_position_manager/: Cargo.toml
programs/non_fungible_position_manager/src/: context.rs  cyclos_core.rs  error.rs  lib.rs  states.rs
programs/non_fungible_position_manager/src/libraries/: mod.rs
programs/swap-router/: Cargo.toml
programs/swap-router/src/: context.rs  error.rs  lib.rs
scripts/: 1-init-factory.ts  2-create-fee-tiers.ts  3-create-tokens-and-faucet.ts  4-airdrop-to-wallet.ts  5-create-pool.ts  6-locker-setup.ts  faucet.ts
scripts/utils/: balance-tree.ts  merkle-tree.ts
tests/: cyclos-core.ts  cyclos-protocol-v2.ts  next-bit.ts  non-fungible-position-manager.ts  pools.ts  utils.ts
