[package]
name = "cyclos-core"
version = "0.1.0"
description = "Anchor client and source for Cykura (formerly Cyclos) concentrated liquidity AMM"
edition = "2021"
license = "	AGPL-3.0-only"
keywords = ["solana", "anchor", "blockchain"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cyclos_core"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
# pinned since Solana needs Rust v1.56.0, while the latest uint crate mandates a newer version
uint = "=0.9.1"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
quickcheck = "0.9"
