[package]
name = "cyclos-protocol-v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cyclos_protocol_v2"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
ux = "0.1.3"
bitmaps = "3.1.0"
