[package]
name = "non-fungible-position-manager"
version = "0.1.0"
description = "Manage core program positions as NFTs"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "non_fungible_position_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
cyclos-core = { path = "../core", features = ["cpi"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
# muldiv = "1.0.0"
muldiv = { git = "https://github.com/zkwarlock/rust-muldiv", branch = "128-bit" }
